--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,9 @@
 ---
-title: "Clase6"
+title: 'Mi Portafolio Académico'
 ---
 
-This is a Quarto website.
+# Bienvenidos
+Aquí puedes describir tu perfil profesional.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+## Proyectos Destacados
+Lista tus proyectos principales. 
